--- a/global.css
+++ b/global.css
@@ -1,59 +1,98 @@
-/* From Uiverse.io by bociKond */ 
-.spinner {
-  width: 70.4px;
-  height: 70.4px;
-  --clr: rgb(247, 197, 159);
-  --clr-alpha: rgb(247, 197, 159,.1);
-  animation: spinner 1.6s infinite ease;
-  transform-style: preserve-3d;
-}
-
-.spinner > div {
-  background-color: var(--clr-alpha);
-  height: 100%;
-  position: absolute;
+/* From Uiverse.io by Danishrehman786 */ 
+.matrix-container {
   width: 100%;
-  border: 3.5px solid var(--clr);
+  height: 100%;
+  perspective: 1500px;
+  position: relative;
+  background-color: #0d0d1a;
+  overflow: hidden;
 }
 
-.spinner div:nth-of-type(1) {
-  transform: translateZ(-35.2px) rotateY(180deg);
+.matrix-grid {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#262645 1px, transparent 1px),
+    linear-gradient(90deg, #262645 1px, transparent 1px),
+    repeating-linear-gradient(
+      45deg,
+      rgba(0, 255, 170, 0.05) 0px 1px,
+      transparent 1px 12px
+    ),
+    repeating-linear-gradient(
+      -45deg,
+      rgba(0, 255, 170, 0.05) 0px 1px,
+      transparent 1px 12px
+    ),
+    radial-gradient(circle at center, #0a0a1a 0%, #000 100%);
+  background-size:
+    28px 28px,
+    28px 28px,
+    50px 50px,
+    50px 50px,
+    cover;
+  border: 1px solid rgba(0, 255, 170, 0.1);
+  box-shadow:
+    inset 0 0 40px rgba(0, 255, 170, 0.1),
+    0 0 60px rgba(0, 255, 170, 0.15);
+  transform-style: preserve-3d;
+  transition: all 0.6s ease-in-out;
+  position: relative;
 }
 
-.spinner div:nth-of-type(2) {
-  transform: rotateY(-270deg) translateX(50%);
-  transform-origin: top right;
+.matrix-grid::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    90deg,
+    transparent,
+    rgba(0, 255, 170, 0.4),
+    transparent
+  );
+  animation: borderFlow 6s linear infinite;
+  pointer-events: none;
+  mask:
+    linear-gradient(#fff 0 0) padding-box,
+    linear-gradient(#fff 0 0);
+  mask-composite: exclude;
 }
 
-.spinner div:nth-of-type(3) {
-  transform: rotateY(270deg) translateX(-50%);
-  transform-origin: center left;
+.matrix-grid::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 160px;
+  height: 160px;
+  background: radial-gradient(
+    circle,
+    rgba(0, 255, 170, 0.15) 0%,
+    transparent 70%
+  );
+  transform: translate(-50%, -50%);
+  animation: pulse 3.5s ease-in-out infinite alternate;
+  z-index: 1;
 }
 
-.spinner div:nth-of-type(4) {
-  transform: rotateX(90deg) translateY(-50%);
-  transform-origin: top center;
-}
-
-.spinner div:nth-of-type(5) {
-  transform: rotateX(-90deg) translateY(50%);
-  transform-origin: bottom center;
-}
-
-.spinner div:nth-of-type(6) {
-  transform: translateZ(35.2px);
-}
-
-@keyframes spinner {
+@keyframes borderFlow {
   0% {
-    transform: rotate(45deg) rotateX(-25deg) rotateY(25deg);
+    background-position: 0% 50%;
   }
-
-  50% {
-    transform: rotate(45deg) rotateX(-385deg) rotateY(25deg);
-  }
-
   100% {
-    transform: rotate(45deg) rotateX(-385deg) rotateY(385deg);
+    background-position: 200% 50%;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: translate(-50%, -50%) scale(0.85);
+    opacity: 0.2;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1.1);
+    opacity: 0.5;
   }
 }
